--- a/src/containers/Sidebar/Sidebar.scss
+++ b/src/containers/Sidebar/Sidebar.scss
@@ -3,13 +3,13 @@
   background: #363740;
   min-height: 100vh;
   padding: 30px 0;
-  
+
   .logo-holder {
     display: flex;
     align-items: center;
     padding: 0 25px;
     margin-bottom: 63px ;
-    
+
     .sidebar-logo {
       margin-right: 14px;
     }
@@ -22,5 +22,11 @@
       line-height: 24px;
       letter-spacing: 0.4px;
     }
+  }
+
+  .line {
+    display: block;
+    margin: 16px 0;
+    border-top: 1px solid rgba(167, 167, 167, 0.144);
   }
 }
